src/test/deca/context/valid/initialisation_variable_float_avec_int_2.deca
// Description :
//initialisation d'une variable de type float avec une opération de type int
//
// Resultats : 
// 	ok

{int y = 2;
float x = 3+y;}